STYLE/FIX: Header fix components wrap err

--- a/src/components/structure/Header/index.module.css
+++ b/src/components/structure/Header/index.module.css
@@ -11,3 +11,7 @@
   font-size: 1.5rem;
   font-weight: 700;
 }
+
+.div {
+  display: flex;
+}
